--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <ul class="social-links">
             <li><a href="https://www.linkedin.com/in/shreyas-k-593a40279/" target="_blank">LinkedIn</a></li>
             <li><a href="https://www.instagram.com/itshre.s/" target="_blank">Instagram</a></li>
-            <li><a href="https://github.com/your-github" target="_blank">GitHub</a></li>
+            <li><a href="https://github.com/ShreyasKemp?tab=repositories" target="_blank">GitHub</a></li>
         </ul>
     </div>
 </section>
