--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
         <div class="container">
             <h2 style="font-family:'EB Garamond', serif;">Resume</h2>
             <p>Below, you'll find a snapshot of my professional and academic journey.</p><br>
+            <section>
             <a href="./Resume.pdf" target="_blank"><img src="./Resume_page-0001.jpg" width="300px" height="400px" alt="Resume" class="res-pic"/></a>
+            </section>
         </div>
     </section>
 
@@ -74,7 +76,6 @@
                 <li>Web Development: HTML, CSS, JavaScript</li>
                 <li>Machine Learning: TensorFlow, scikit-learn</li>
                 <li>Database Management: MySQL, MongoDB</li>
-                <!-- Add more skills as needed -->
             </ul>
         </div>
     </section>
@@ -89,7 +90,6 @@
                 <li>Reading Manga</li>
                 <li>Watching Anime</li>
                 <li>Playing video games</li>
-                <!-- Add more interests as needed -->
             </ul>
         </div>
     </section>
@@ -106,15 +106,11 @@
     </div>
 </section>
 
-<!-- ... (remaining code) ... -->
-
-
     <section id="contact" class="contact-section">
         <div class="container">
             <h2 style="font-family:'EB Garamond', serif;">Contact</h2>
             <p>Phone Number: +91 7397289630</p>
             <p>Email id: shreyas.k2022@vitstudent.ac.in</p>
-            <!-- Include a contact form and your contact details here -->
         </div>
     </section>
 
