--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
-    <title>Your Name - Creative Portfolio</title>
+    <title>SHREYAS PORTFOLIO</title>
 </head>
 <body>
     <section class="me-img">
